# claude-status-bar

./: .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  claude-status-bar.install  install.sh
docs/screenshots/: README.md
packaging/: panels.md
plasmoid/: metadata.json
plasmoid/contents/ui/: main.qml
scripts/: demo-pose.sh  gif-from.sh  install-plasmoid.sh
src/: hook.rs  icon.rs  install.rs  main.rs  paths.rs  report.rs  state.rs  tray.rs
tools/: gen-claude-sprite.py
