[package]
name = "claude-status-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
ksni = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# PNG-only, pure Rust (no native libs) — decode/scale the Claude spark for the tray.
image = { version = "0.25", default-features = false, features = ["png"] }
